--- a/frontend/movingButton/index.html
+++ b/frontend/movingButton/index.html
@@ -8,7 +8,7 @@
   <span class="button">
     <span class="fa fa-star"></span>
     button
-    <span class="fa fa-star"></span>
+    <span>💩</span>
   </span>
 
   <script src="script.js"></script>
