like buttons change status

--- a/frontend/facebookLike/index.html
+++ b/frontend/facebookLike/index.html
@@ -20,9 +20,14 @@
 
     <p class="message"> Ganon is a buster </p>
     <div class="reactions">
-      <div class="like">
+      <div class="likeMain" data-status="./assets/profile.png">
         <div class="likeBox">
-          yoyoyo!sdsdscsdfdsfdsfdssdfsfsfsfffsfs
+          <div class="like" data-button="button" data-status="./assets/profile.png">Like</div>
+          <div class="heart" data-button="button" data-status="./assets/heart.png">Heart</div>
+          <div class="laugh" data-button="button" data-status="./assets/heart.png">Laugh</div>
+          <div class="shock" data-button="button" data-status="./assets/heart.png">Shock</div>
+          <div class="cry" data-button="button" data-status="./assets/heart.png">Cry</div>
+          <div class="angry" data-button="button" data-status="./assets/heart.png">Angry</div>
         </div>
         Like
       </div>
@@ -31,6 +36,6 @@
     </div>
 
   </div>
-  <script src="script.js" />
+  <script src="script.js"></script>
 </body>
 </html>
