--- a/frontend/facebookLike/index.html
+++ b/frontend/facebookLike/index.html
@@ -19,18 +19,34 @@
     </div>
 
     <p class="message"> Ganon is a buster </p>
+
     <div class="reactions">
       <div class="likeMain" data-status="./assets/profile.png">
         <div class="likeBox">
-          <div class="like" data-button="button" data-status="./assets/profile.png">Like</div>
-          <div class="heart" data-button="button" data-status="./assets/heart.png">Heart</div>
-          <div class="laugh" data-button="button" data-status="./assets/heart.png">Laugh</div>
-          <div class="shock" data-button="button" data-status="./assets/heart.png">Shock</div>
-          <div class="cry" data-button="button" data-status="./assets/heart.png">Cry</div>
-          <div class="angry" data-button="button" data-status="./assets/heart.png">Angry</div>
+          <div class="trimImg">
+            <div class="like" data-button="button" data-status="./assets/navi.png" data-text="Like"><img src="./assets/navi.png" /></div>
+          </div>
+          <div class="trimImg">
+            <div class="heart" data-button="button" data-status="./assets/heart.png" data-text="Heart"><img src="./assets/heart.png" /></div>
+          </div>
+          <div class="trimImg">
+            <div class="laugh" data-button="button" data-status="./assets/haha.png" data-text="Haha"><img src="./assets/haha.png" /></div>
+          </div>
+          <div class="trimImg">
+            <div class="shock" data-button="button" data-status="./assets/rupee.png" data-text="Wow"><img src="./assets/rupee.png" /></div>
+          </div>
+          <div class="trimImg">
+            <div class="cry" data-button="button" data-status="./assets/majora.png" data-text="Sad"><img src="./assets/majora.png" /></div>
+          </div>
+          <div class="trimImg">
+            <div class="angry" data-button="button" data-status="./assets/cucco.png" data-text="Angry"><img src="./assets/cucco.png" /></div>
+          </div>
         </div>
-        Like
+        <div class="trimImg">
+          <img src="./assets/navi.png" />
+        </div>Like
       </div>
+
       <div class="comment">Comment</div>
       <div class="Share">Share</div>
     </div>
