currentLike class added and updated on click only

--- a/frontend/facebookLike/index.html
+++ b/frontend/facebookLike/index.html
@@ -42,10 +42,12 @@
             <div class="angry" data-button="button" data-status="./assets/cucco.png" data-text="Angry"><img src="./assets/cucco.png" /></div>
           </div>
         </div>
-        <div class="trimImg">
-          <img src="./assets/navi.png" />
+
+      <div class="trimImg currentLike">
+        <img src="./assets/navi.png" />
         </div>Like
       </div>
+
 
       <div class="comment">Comment</div>
       <div class="Share">Share</div>
