--- a/frontend/facebookLike/index.html
+++ b/frontend/facebookLike/index.html
@@ -24,28 +24,30 @@
       <div class="likeMain" data-status="./assets/profile.png">
         <div class="likeBox">
           <div class="trimImg">
-            <div class="like" data-button="button" data-status="./assets/navi.png" data-text="Like"><img src="./assets/navi.png" /></div>
+            <img src="./assets/navi.png" data-text="Like"/>
           </div>
           <div class="trimImg">
-            <div class="heart" data-button="button" data-status="./assets/heart.png" data-text="Heart"><img src="./assets/heart.png" /></div>
+            <img src="./assets/heart.png" data-text="Love"/>
           </div>
           <div class="trimImg">
-            <div class="laugh" data-button="button" data-status="./assets/haha.png" data-text="Haha"><img src="./assets/haha.png" /></div>
+            <img src="./assets/haha.png" data-text="Haha"/>
           </div>
           <div class="trimImg">
-            <div class="shock" data-button="button" data-status="./assets/rupee.png" data-text="Wow"><img src="./assets/rupee.png" /></div>
+            <img src="./assets/rupee.png" data-text="Wow"/>
           </div>
           <div class="trimImg">
-            <div class="cry" data-button="button" data-status="./assets/majora.png" data-text="Sad"><img src="./assets/majora.png" /></div>
+            <img src="./assets/majora.png" data-text="Cry"/>
           </div>
           <div class="trimImg">
-            <div class="angry" data-button="button" data-status="./assets/cucco.png" data-text="Angry"><img src="./assets/cucco.png" /></div>
+            <img src="./assets/cucco.png" data-text="Angry"/>
           </div>
         </div>
 
-      <div class="trimImg currentLike">
-        <img src="./assets/navi.png" />
-        </div>Like
+        <div class="currentLike">
+          <div class="trimImg">
+            <img src="./assets/navi.png" />
+          </div>Like
+        </div>
       </div>
 
 
