--- a/frontend/landscape/index.html
+++ b/frontend/landscape/index.html
@@ -3,8 +3,17 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
+  <div class="frame">
+    <div class="horizon">
+      <div class="mountain"></div>
+      <div class="mountain right"></div>
+      <div class="sun"></div>
+    </div>
+    <div class="grass"></div>
+  </div>
+  </div>
 </body>
 </hmtl>
