--- a/frontend/cssgrid/index.html
+++ b/frontend/cssgrid/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
   <div class="container">
-    <div class="header">
-
-    </div>
+    <div class="header">stuff</div>
+    <div class="index">index</div>
   </div>
 </body>
 </html>
