--- a/frontend/cssgrid/js/index.html
+++ b/frontend/cssgrid/js/index.html
@@ -11,6 +11,6 @@
     <div class="header">stuffinghere</div>
     <div class="index">index</div>
   </div>
-  <script src="./js/scripts.min.js"></script>
+  <script src="./scripts.min.js"></script>
 </body>
 </html>
