--- a/frontend/optimizedImages/index.html
+++ b/frontend/optimizedImages/index.html
@@ -2,8 +2,8 @@
 <head>
   <title>Optimized Images</title>
   <meta charst="utf-8" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 <body>
-
+  <script src="./bundle.js"></script>
 </body>
