--- a/frontend/optimizedImages/index.html
+++ b/frontend/optimizedImages/index.html
@@ -5,5 +5,8 @@
   <link rel="stylesheet" href="main.css" />
 </head>
 <body>
+  <p>
+    hello
+  </p>
   <script src="./bundle.js"></script>
 </body>
