--- a/frontend/expediaDeals/index.html
+++ b/frontend/expediaDeals/index.html
@@ -5,4 +5,20 @@
   <link rel="stylesheet" href="main.css"/>
 </head>
 <body>
+  <div class='container'>
+    <div class='tenPercent'>Expedia+ Get an extra 10% off or more on select hotels with Member Pricing Join now, it's free!</div>
+    <div class='heading'>
+      Account
+    </div>
+    <div class='search'>
+      Today's Amazing Flight Deals
+    </div>
+    <div>los angeles</div>
+    <div>vegas</div>
+    <div>los angeles</div>
+    <div>vegas</div>
+    <div>los angeles</div>
+    <div>vegas</div>
+    <div class='terms'>mumbojumbo</div>
+  </div>
 </body>
