--- a/frontend/expediaDeals/index.html
+++ b/frontend/expediaDeals/index.html
@@ -8,17 +8,67 @@
   <div class='container'>
     <div class='tenPercent'>Expedia+ Get an extra 10% off or more on select hotels with Member Pricing Join now, it's free!</div>
     <div class='heading'>
-      Account
+      <div>Account</div>
+      <div>My Lists</div>
+      <div>My Trips</div>
+      <div>Support</div>
+      <div>Español</div>
+      <div>简体中文</div>
     </div>
     <div class='search'>
       Today's Amazing Flight Deals
+      <div class='options'>
+        <div>Hotel only</div>
+        <div>Flight only</div>
+        <div>Flight + Hotel</div>
+        <div class='flightOnly'>
+          <label class='flightOnlyOption'>Roundtrip
+            <input type='radio' check='checked' name='radio' />
+            <span class='checkmark'></span>
+          </label>
+          <label class='flightOnlyOption'>One Way
+            <input type='radio' name='radio' />
+            <span class='checkmark'></span>
+          </label>
+          <label class='flightOnlyOption'>Multiple Desintations
+            <input type='radio' name='radio' />
+            <span class='checkmark'></span>
+          </label>
+          <div class='roundtrip'>
+            <label class='tripInputs leavingFrom'>Leaving from
+              <input type='text' placeholder='City or airport'/>
+            </label>
+            <label class='tripInputs goingTo'>Going to
+              <input type='text' placeholder='City or airport'/>
+            </label>
+            <label class='tripInputs departing'>Departing
+              <input type='text' placeholder='mm/dd/yyyy'/>
+            </label>
+            <label class='tripInputs returning'>Returning
+              <input type='text' placeholder='mm/dd/yyyy'/>
+            </label>
+            <label class='tripInputs adults'>Adults(18+)
+              <input type='text' placeholder='mm/dd/yyyy'/>
+            </label>
+            <label class='tripInputs children'>Children(0-17)
+              <input type='text' placeholder='mm/dd/yyyy'/>
+            </label>
+            <span>Avanced options</span>
+            <div class='searchSubmit'>Search</div>
+          </div>
+        </div>
+
+
+      </div>
     </div>
-    <div>los angeles</div>
-    <div>vegas</div>
-    <div>los angeles</div>
-    <div>vegas</div>
-    <div>los angeles</div>
-    <div>vegas</div>
+    <div class='flights'>
+      <div class='flightItem'>los angeles</div>
+      <div class='flightItem'>vegas</div>
+      <div class='flightItem'>los angeles</div>
+      <div class='flightItem'>vegas</div>
+      <div class='flightItem'>los angeles</div>
+      <div class='flightItem'>vegas</div>
+    </div>
     <div class='terms'>mumbojumbo</div>
   </div>
 </body>
