--- a/frontend/expediaDeals/index.html
+++ b/frontend/expediaDeals/index.html
@@ -92,13 +92,41 @@
       </div>
     </div>
     <div class='flights'>
-      <div class='flightItem'>los angeles</div>
-      <div class='flightItem'>vegas</div>
-      <div class='flightItem'>los angeles</div>
-      <div class='flightItem'>vegas</div>
-      <div class='flightItem'>los angeles</div>
-      <div class='flightItem'>vegas</div>
+      <div class='flightItem'>
+        <img src='' />
+        <div class='flightFrom'>San Francisco (SFO)</div>
+        <div class='flightTo'>Los Angeles (LAX)</div>
+        <div class='price'>$69</div>
+      </div>
+      <div class='flightItem'>
+        <img src='' />
+        <div class='flightFrom'>San Francisco (SFO)</div>
+        <div class='flightTo'>Los Angeles (LAX)</div>
+        <div class='price'>$69</div>
+      </div><div class='flightItem'>
+        <img src='' />
+        <div class='flightFrom'>San Francisco (SFO)</div>
+        <div class='flightTo'>Los Angeles (LAX)</div>
+        <div class='price'>$69</div>
+      </div><div class='flightItem'>
+        <img src='' />
+        <div class='flightFrom'>San Francisco (SFO)</div>
+        <div class='flightTo'>Los Angeles (LAX)</div>
+        <div class='price'>$69</div>
+      </div><div class='flightItem'>
+        <img src='' />
+        <div class='flightFrom'>San Francisco (SFO)</div>
+        <div class='flightTo'>Los Angeles (LAX)</div>
+        <div class='price'>$69</div>
+      </div><div class='flightItem'>
+        <img src='' />
+        <div class='flightFrom'>San Francisco (SFO)</div>
+        <div class='flightTo'>Los Angeles (LAX)</div>
+        <div class='price'>$69</div>
+      </div>
     </div>
     <div class='terms'>mumbojumbo</div>
+    <script src='script.js'></script>
+    
   </div>
 </body>
