--- a/frontend/expediaDeals/index.html
+++ b/frontend/expediaDeals/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>Expedia Deals CSS Grids Practice</title>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="main.css"/>
+  <link rel="stylesheet" href="./style/main.css"/>
 </head>
 <body>
   <div class='container'>
