--- a/frontend/expediaDeals/index.html
+++ b/frontend/expediaDeals/index.html
@@ -126,7 +126,7 @@
       </div>
     </div>
     <div class='terms'>mumbojumbo</div>
-    <script src='script.js'></script>
+    <script src='./script/script.js'></script>
     
   </div>
 </body>
