flight items css

--- a/frontend/expediaDeals/index.html
+++ b/frontend/expediaDeals/index.html
@@ -93,40 +93,52 @@
     </div>
     <div class='flights'>
       <div class='flightItem'>
-        <img src='' />
-        <div class='flightFrom'>San Francisco (SFO)</div>
-        <div class='flightTo'>Los Angeles (LAX)</div>
+        <img src='./assets/destinationImages/sandiego.jpeg' />
+        <div class='shadow'>Lol</div>
+        <div class='roundtrip'>Roundtrip</div>
+        <div class='roundtripDateRange'>Sun, Jul 1 - Wed, Jul 4</div>
+        <div class='flightRoundtripCities'>San Francisco (SFO) - San Diego (SAN)</div>
         <div class='price'>$69</div>
       </div>
       <div class='flightItem'>
-        <img src='' />
-        <div class='flightFrom'>San Francisco (SFO)</div>
-        <div class='flightTo'>Los Angeles (LAX)</div>
+        <img src='./assets/destinationImages/sandiego.jpeg' />
+        <div class='shadow'>Lol</div>
+        <div class='roundtrip'>Roundtrip</div>
+        <div class='roundtripDateRange'>Sun, Jul 1 - Wed, Jul 4</div>
+        <div class='flightRoundtripCities'>San Francisco (SFO) - San Diego (SAN)</div>
         <div class='price'>$69</div>
       </div><div class='flightItem'>
-        <img src='' />
-        <div class='flightFrom'>San Francisco (SFO)</div>
-        <div class='flightTo'>Los Angeles (LAX)</div>
+        <img src='./assets/destinationImages/sandiego.jpeg' />
+        <div class='shadow'>Lol</div>
+        <div class='roundtrip'>Roundtrip</div>
+        <div class='roundtripDateRange'>Sun, Jul 1 - Wed, Jul 4</div>
+        <div class='flightRoundtripCities'>San Francisco (SFO) - San Diego (SAN)</div>
         <div class='price'>$69</div>
       </div><div class='flightItem'>
-        <img src='' />
-        <div class='flightFrom'>San Francisco (SFO)</div>
-        <div class='flightTo'>Los Angeles (LAX)</div>
+        <img src='./assets/destinationImages/sandiego.jpeg' />
+        <div class='shadow'>Lol</div>
+        <div class='roundtrip'>Roundtrip</div>
+        <div class='roundtripDateRange'>Sun, Jul 1 - Wed, Jul 4</div>
+        <div class='flightRoundtripCities'>San Francisco (SFO) - San Diego (SAN)</div>
         <div class='price'>$69</div>
       </div><div class='flightItem'>
-        <img src='' />
-        <div class='flightFrom'>San Francisco (SFO)</div>
-        <div class='flightTo'>Los Angeles (LAX)</div>
+        <img src='./assets/destinationImages/sandiego.jpeg' />
+        <div class='shadow'>Lol</div>
+        <div class='roundtrip'>Roundtrip</div>
+        <div class='roundtripDateRange'>Sun, Jul 1 - Wed, Jul 4</div>
+        <div class='flightRoundtripCities'>San Francisco (SFO) - San Diego (SAN)</div>
         <div class='price'>$69</div>
       </div><div class='flightItem'>
-        <img src='' />
-        <div class='flightFrom'>San Francisco (SFO)</div>
-        <div class='flightTo'>Los Angeles (LAX)</div>
+        <img src='./assets/destinationImages/sandiego.jpeg' />
+        <div class='shadow'>Lol</div>
+        <div class='roundtrip'>Roundtrip</div>
+        <div class='roundtripDateRange'>Sun, Jul 1 - Wed, Jul 4</div>
+        <div class='flightRoundtripCities'>San Francisco (SFO) - San Diego (SAN)</div>
         <div class='price'>$69</div>
       </div>
     </div>
     <div class='terms'>mumbojumbo</div>
     <script src='./script/script.js'></script>
-    
+
   </div>
 </body>
